# avocet

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  avocet.db  ganglion.toml  justfile  links.db  pyproject.toml
.github/workflows/: python-app.yml
avocet/: ai.py  app.py  avocet.css  avocet.tcss  database_manager.py  google_sheets.py  links.css  models.py  raindrop.py  raindrop_api.py  screens.py  summary.py
docs/superpowers/plans/: 2026-05-29-avocet-modernization.md
docs/superpowers/specs/: 2026-05-29-avocet-modernization-design.md
links/: app.py  link.py  links.css  raindrop.py  tag.py
tests/: fakes.py  test_app_crud.py  test_app_interaction.py  test_app_search_edit.py  test_app_sync.py  test_app_theme.py  test_database_manager.py  test_env.py  test_models.py  test_raindrop.py  test_raindrop_api.py  test_screens.py  test_snapshots.py  test_summary.py
tests/__snapshots__/test_snapshots/: test_add_modal.raw  test_delete_modal.raw  test_detail_with_summary.raw  test_main_view.raw  test_search_modal.raw
tests/snapshot_apps/: seeded_app.py
