[tool.poetry]
name = "avocet"
version = "0.1.0"
description = "A TUI for Raindrop.io bookmarks written in Python"
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.1.0"
httpx = "^0.24.1"
pytest = "^7.3.0"
textual = "^0.35.1"
sqlalchemy = "^2.0.19"
textual-web = "^0.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-httpx = "^0.23.1"
pytest-asyncio = "^0.21.1"
asynctest = "^0.13.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
textual-dev = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
