[project]
name = "avocet"
version = "1.0.0"
description = "A TUI for Raindrop.io bookmarks written in Python"
authors = [{ name = "Joshua Oliphant", email = "joshua.oliphant@hey.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual>=8.2,<9",
    "httpx>=0.28",
    "sqlalchemy>=2.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
avocet = "avocet.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "pytest-mock>=3.14",
    "pytest-textual-snapshot>=1.0",
    "textual-dev>=1.7",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["avocet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.12"
